fix: Fixed socket.io guest authorization + rights

--- a/server/views/error-forbidden.pug
+++ b/server/views/error-forbidden.pug
@@ -22,7 +22,7 @@ html(data-logic='error')
 
   body(class='is-forbidden')
     .container
-      a(href='/'): img(src='/favicons/android-icon-96x96.png')
+      a(href='/'): img(src='/images/logo.png')
       h1 Forbidden
       h2 Sorry, you don't have the necessary permissions to access this page.
       a.button.is-amber.is-inverted(href='/') Go Home
