--- a/server/views/error-notexist.pug
+++ b/server/views/error-notexist.pug
@@ -22,7 +22,7 @@ html(data-logic='error')
 
   body(class='is-notexist')
     .container
-      a(href='/'): img(src='/favicons/android-icon-96x96.png')
+      a(href='/'): img(src='/images/logo.png')
       h1= message
       h2 Would you like to create this entry?
       a.button.is-amber.is-inverted.is-featured(href='/create/' + newpath) Create
