--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -22,7 +22,7 @@ html(data-logic='error')
 
   body(class='is-error')
     .container
-      a(href='/'): img(src='/favicons/android-icon-96x96.png')
+      a(href='/'): img(src='/images/logo.png')
       h1= message
       h2 Oops, something went wrong
       a.button.is-amber.is-inverted.is-featured(href='/') Go Home
