--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -61,11 +61,12 @@ block content
                   a(href='/login')
                     i.icon-unlock
                     span Login
-          aside.stickyscroll(data-margin-top=15)
+          aside.stickyscroll
             .sidebar-label
               span Page Contents
             ul.sidebar-menu
-              li: a(href='#root', title='Top of Page') Top of Page
+              li: a(href='#root', title='Top of Page')
+                i.icon-arrow-up2
               +tocMenu(pageData.tree)
 
         .column
