--- a/client/scss/base/base.scss
+++ b/client/scss/base/base.scss
@@ -72,6 +72,15 @@ a {
   display: none !important;
 }
 
+.is-hidden-until-scroll {
+  max-height: 0;
+  overflow: hidden;
+  transition: all .6s ease;
+}
+.is-sticky .is-hidden-until-scroll {
+  max-height: 30px;
+}
+
 .is-hidden-mobile {
   @include mobile {
     display: none !important;
