--- a/server/views/pages/admin/settings.pug
+++ b/server/views/pages/admin/settings.pug
@@ -7,6 +7,7 @@ block adminContent
       h2.subtitle Manage site configuration
     .form-sections
       section
+        img(src='/images/logo.png', style={width:'200px', float:'right'})
         label.label System Version
         .section-block
           p Current Version: #[strong= sysversion.current]
