--- a/server/views/error-notexist.pug
+++ b/server/views/error-notexist.pug
@@ -24,6 +24,6 @@ html(data-logic='error')
     .container
       a(href='/'): img(src='/images/logo.png')
       h1= message
-      h2 Would you like to create this entry?
-      a.button.is-amber.is-inverted.is-featured(href='/create/' + newpath) Create
-      a.button.is-amber.is-inverted(href='/') Go Home
+      h2= t('errors:notexistdetail')
+      a.button.is-amber.is-inverted.is-featured(href='/create/' + newpath)= t('errors:actions.create')
+      a.button.is-amber.is-inverted(href='/')= t('errors:actions.gohome')
