--- a/server/views/common/header.pug
+++ b/server/views/common/header.pug
@@ -11,7 +11,7 @@
       block rootNavCenter
         .nav-item
           p.control(v-bind:class='{ "is-loading": searchload > 0 }')
-            input.input#search-input(type='text', v-model='searchq', @keyup.esc='closeSearch', @keyup.down='moveDownSearch', @keyup.up='moveUpSearch', @keyup.enter='moveSelectSearch', debounce='400', placeholder='Search...')
+            input.input#search-input(type='text', v-model='searchq', @keyup.esc='closeSearch', @keyup.down='moveDownSearch', @keyup.up='moveUpSearch', @keyup.enter='moveSelectSearch', debounce='400', placeholder=t('search.placeholder'))
     span.nav-toggle
       span
       span
@@ -22,13 +22,13 @@
 
   transition(name='searchresults-anim', enter-active-class='slideInDown', leave-active-class='fadeOutUp')
     .searchresults.animated(v-show='searchactive', v-cloak, style={'display':'none'})
-      p.searchresults-label Search Results
+      p.searchresults-label= t('search.results')
       ul.searchresults-list
         li(v-if='searchres.length === 0')
-          a: em No results matching your query
+          a: em= t('search.nomatch')
         li(v-for='sres in searchres', v-bind:class='{ "is-active": searchmovekey === "res." + sres.entryPath }')
           a(v-bind:href='"/" + sres.entryPath') {{ sres.title }}
-      p.searchresults-label(v-if='searchsuggest.length > 0') Did you mean...?
+      p.searchresults-label(v-if='searchsuggest.length > 0')= t('search.didyoumean')
       ul.searchresults-list(v-if='searchsuggest.length > 0')
         li(v-for='sug in searchsuggest', v-bind:class='{ "is-active": searchmovekey === "sug." + sug }')
           a(v-on:click='useSuggestion(sug)') {{ sug }}
