--- a/server/views/pages/all.pug
+++ b/server/views/pages/all.pug
@@ -10,22 +10,22 @@ block content
       .sidebar.is-collapsed
         aside
           .sidebar-label
-            span NAV
+            span= t('sidebar.nav')
           ul.sidebar-menu
             li
               a(href='/')
                 i.icon-home
-                span Home
+                span= t('nav.home')
             if !isGuest
               li
                 a(href='/admin')
                   i.icon-head
-                  span Account
+                  span= t('nav.account')
             else
               li
                 a(href='/login')
                   i.icon-unlock
-                  span Login
+                  span= t('nav.login')
       ul.collapsable-nav(v-for='treeItem in tree', :class='{ "has-children": treeItem.hasChildren }', v-cloak)
         li(v-for='page in treeItem.pages', :class='{ "is-active": page.isActive }')
           a(v-on:click='mainAction(page)')
@@ -34,7 +34,7 @@ block content
               span {{ page.title }}
             template(v-else)
               i.icon-home
-              span Home
+              span= t('nav.home')
           a.is-pagelink(v-if='page.isDirectory && page.isEntry', v-on:click='goto(page._id)')
             i.icon-file-text-o
             i.icon-arrow-right2
