--- a/server/views/pages/welcome.pug
+++ b/server/views/pages/welcome.pug
@@ -11,6 +11,6 @@ block content
     .container
       .welcome
         img(src='/images/logo.png', alt='Wiki.js')
-        h1 Welcome to your wiki!
-        h2 Let's get started and create the home page.
-        a.button.is-indigo(href='/create/home') Create Home Page
+        h1= t('welcome.title')
+        h2= t('welcome.subtitle')
+        a.button.is-indigo(href='/create/home')= t('welcome.createhome')
