--- a/server/views/pages/admin/users-edit.pug
+++ b/server/views/pages/admin/users-edit.pug
@@ -5,66 +5,51 @@ block rootNavRight
   .nav-item
     a.button(href='/admin/users')
       i.icon-reply
-      span Return to Users
+      span= t('admin:users.returntousers')
 
 block adminContent
   #page-type-admin-users-edit
     .hero
-      h1.title#title Edit User
+      h1.title#title= t('admin:users.edituser')
       h2.subtitle= usr.email
     table.table
       thead
         tr
-          th Unique ID
-          th Provider
-          th Created On
-          th Updated On
+          th= t('admin:users.uniqueid')
+          th= t('admin:users.provider')
+          th= t('admin:users.createdon')
+          th= t('admin:users.updatedon')
       tbody
         tr
           td.is-centered= usr._id
           td.is-centered.has-icons
             case usr.provider
-              when 'local'
-                i.icon-server.is-deep-orange
-                | Local Database
-              when 'windowslive'
-                i.icon-windows2.is-blue
-                | Microsoft Account
-              when 'azure'
-                i.icon-windows2.is-blue
-                | Azure Active Directory
-              when 'google'
-                i.icon-google.is-blue
-                | Google ID
-              when 'facebook'
-                i.icon-facebook.is-indigo
-                | Facebook
-              when 'github'
-                i.icon-github.is-blue-grey
-                | GitHub
-              when 'slack'
-                i.icon-slack.is-purple
-                | Slack
-              when 'ldap'
-                i.icon-arrow-repeat-outline
-                | LDAP / Active Directory
+              when 'local': i.icon-server
+              when 'windowslive': i.icon-windows2.is-blue
+              when 'azure': i.icon-windows2.is-blue
+              when 'google': i.icon-google.is-blue
+              when 'facebook': i.icon-facebook.is-indigo
+              when 'github': i.icon-github.is-grey
+              when 'slack': i.icon-slack.is-purple
+              when 'ldap': i.icon-arrow-repeat-outline
               default: i.icon-warning
+            = t('auth:providers.' + usr.provider)
           td.is-centered= userMoment(usr.createdAt).format('lll')
           td.is-centered= userMoment(usr.updatedAt).format('lll')
     .form-sections
       section
-        label.label Email Address
+        label.label= t('admin:profile.email')
         p.control.is-fullwidth
           input.input(type='text', placeholder='john.smith@example.com', v-model='email', disabled=!usrOpts.canChangeEmail)
       section
-        label.label Display Name
+        label.label= t('admin:profile.displayname')
         p.control.is-fullwidth
-          input.input(type='text', placeholder='John Smith', v-model='name', disabled=!usrOpts.canChangeName)
+          input.input(type='text', placeholder=t('admin:profile.displaynameexample'), v-model='name', disabled=!usrOpts.canChangeName)
       if usrOpts.canChangePassword
         section
-          label.label Password
+          label.label= t('admin:profile.password')
           p.control.is-fullwidth
-            input.input(type='password', placeholder='Password', v-model='password', value='********')
+            input.input(type='password', placeholder=t('admin:profile.password'), v-model='password', value='********')
       section
         label.label Access Rights
         table.table
