--- a/server/views/pages/admin/users.pug
+++ b/server/views/pages/admin/users.pug
@@ -5,22 +5,22 @@ block rootNavRight
   .nav-item
     a.button.btn-create-prompt
       i.icon-plus
-      span Create / Authorize User
+      span= t('admin:users.createauthorize')
 
 block adminContent
   #page-type-admin-users
     .hero
-      h1.title#title Users
-      h2.subtitle Manage users and access rights
+      h1.title#title= t('nav.users')
+      h2.subtitle= t('admin:users.subtitle')
     table.table
       thead
         tr
           th
-          th Name
-          th Email
-          th Provider
-          th Created On
-          th Updated On
+          th= t('admin:users.name')
+          th= t('admin:users.email')
+          th= t('admin:users.provider')
+          th= t('admin:users.createdon')
+          th= t('admin:users.updatedon')
       tbody
         each usr in usrs
           tr
@@ -31,31 +31,16 @@ block adminContent
             td= usr.email
             td.is-centered.has-icons
               case usr.provider
-                when 'local'
-                  i.icon-server.is-deep-orange
-                  | Local Database
-                when 'windowslive'
-                  i.icon-windows2.is-blue
-                  | Microsoft Account
-                when 'azure'
-                  i.icon-windows2.is-blue
-                  | Azure Active Directory
-                when 'google'
-                  i.icon-google.is-blue
-                  | Google ID
-                when 'facebook'
-                  i.icon-facebook.is-purple
-                  | Facebook
-                when 'github'
-                  i.icon-github.is-blue-grey
-                  | GitHub
-                when 'slack'
-                  i.icon-slack.is-purple
-                  | Slack
-                when 'ldap'
-                  i.icon-arrow-repeat-outline
-                  | LDAP / Active Directory
+                when 'local': i.icon-server
+                when 'windowslive': i.icon-windows2.is-blue
+                when 'azure': i.icon-windows2.is-blue
+                when 'google': i.icon-google.is-blue
+                when 'facebook': i.icon-facebook.is-indigo
+                when 'github': i.icon-github.is-grey
+                when 'slack': i.icon-slack.is-purple
+                when 'ldap': i.icon-arrow-repeat-outline
                 default: i.icon-warning
+              = t('auth:providers.' + usr.provider)
             td.is-centered= userMoment(usr.createdAt).format('lll')
             td.is-centered= userMoment(usr.updatedAt).format('lll')
 
