--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -18,7 +18,8 @@ html(data-logic='error')
     link(rel='manifest', href='/manifest.json')
 
     // JS / CSS
-    script(type='text/javascript', src='/js/bundle.min.js')
+    script(type='text/javascript', src='/js/libs.min.js')
+    script(type='text/javascript', src='/js/app.min.js')
 
   body(class='is-error')
     .container
