--- a/server/views/pages/admin/users.pug
+++ b/server/views/pages/admin/users.pug
@@ -41,7 +41,7 @@ block adminContent
                 when 'ldap': i.icon-arrow-repeat-outline
                 default: i.icon-warning
               = t('auth:providers.' + usr.provider)
-            td.is-centered= userMoment(usr.createdAt).format('lll')
-            td.is-centered= userMoment(usr.updatedAt).format('lll')
+            td.is-centered= moment(usr.createdAt).format('lll')
+            td.is-centered= moment(usr.updatedAt).format('lll')
 
     include ../../modals/admin-createuser.pug
