--- a/server/views/pages/edit.pug
+++ b/server/views/pages/edit.pug
@@ -25,6 +25,7 @@ block content
   include ../modals/editor-file.pug
   include ../modals/editor-video.pug
   include ../modals/editor-codeblock.pug
+  include ../modals/editor-table.pug
 
 block outside
   #page-loader
