--- a/server/views/common/header.pug
+++ b/server/views/common/header.pug
@@ -1,6 +1,6 @@
 
 #header-container
-  nav.nav.stickyscroll#header
+  nav.nav#header
     .nav-left
       block rootNavLeft
         a.nav-item(href='/')
