--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -64,7 +64,7 @@ block content
                   a(href='/login')
                     i.icon-unlock
                     span= t('nav.login')
-          aside.stickyscroll
+          aside.sidebar-pagecontents
             .sidebar-label
               span= t('sidebar.pagecontents')
             ul.sidebar-menu
