--- a/server/views/modals/editor-table.pug
+++ b/server/views/modals/editor-table.pug
@@ -1,4 +1,4 @@
-
+// By fa93hws (wjun0912@gmail.com)
 .modal#modal-editor-table
   .modal-background
   .modal-container
@@ -15,6 +15,9 @@
               p.control.is-fullwidth
                 select(v-model='modeSelected')
                   option(v-for='mode in modes', v-bind:value='mode.name') {{ mode.caption }}
+              div
+                h2 <br /> Hint!
+                p try <a v-bind:href="url" target = "_blank">this link</a>  to generate the table and paste back.
           .column.ace-container
             #table-editor
 
